Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -443,8 +443,8 @@ $$
 $$
 \end{ankiflashcard}
 
-\section[title]{Kraftigt \footnote{pun intended i rubriken!}reducerade kraftsystem}
-
+\section[title]{Kraftigt reducerade kraftsystem}
+(pun intended i rubriken!)
 % DONOTREMOVE ANKI-FLASHCARD GUID 1642598046
 \begin{ankiflashcard}
     
@@ -783,7 +783,7 @@ $$I = \Delta \vec p = m \Delta \vec v = \int_{t_1}^{t_2} \vec F dt$$
 % DONOTREMOVE ANKI-FLASHCARD GUID 1269641212
 \begin{ankiflashcard}{Definiera centralrörelse och dess kännetecken.}
     \subsection{Centralrörelse}
-    Principen för en centralrörelse är att \textit{endast en centralkraft\footnote{en kraft som alltid går genom samma punkt}}, inga andra krafter, utför \textit{arbete}. \textit{Exempelvis:} en satellits rörelse runt jorden, en fjäder fäst i en punkt (om alla krafter utom fjäderkraften kan försummas)
+    Principen för en centralrörelse är att \textit{endast en centralkraft (en kraft som alltid går genom samma punkt)}, inga andra krafter, utför \textit{arbete}. \textit{Exempelvis:} en satellits rörelse runt jorden, en fjäder fäst i en punkt (om alla krafter utom fjäderkraften kan försummas)
 
     Kännetecken:
     \begin{itemize}
@@ -824,7 +824,7 @@ $s(t)$ beskriver partikelns rörelse längs med en kurva.
 \begin{itemize}
     \item \textbf{Läge:}
     \item \textbf{Hastighet:} $\vec v = \dot s \vec e_t$
-    \item \textbf{Acceleration}: \numbercirclewithunderbrace{\dot v \vec e_t}{1} + \numbercirclewithunderbrace{\frac{v^2}{\rho} \vec e_n}{2} + 0\numbercirclewithunderbrace{\vec e_b}{3}. 
+    \item \textbf{Acceleration}: $\numbercirclewithunderbrace{\dot v \vec e_t}{1} + \numbercirclewithunderbrace{\frac{v^2}{\rho} \vec e_n}{2} + 0\numbercirclewithunderbrace{\vec e_b}{3}$. 
 \end{itemize}
 $$\vec a_b = 0$$ gäller alltid.
 där $$\begin{cases}
@@ -832,7 +832,7 @@ där $$\begin{cases}
     \numbercircle{2}: \text{normalaccelerationen} \\
     \numbercircle{3}: \text{binormalaccelerationen} \\
 \end{cases}$$
-där $\rho$ är krökningsradie\footnote{``radie av den perfekta cirkeln som passar kring riktningen``}.
+där $\rho$ är krökningsradie, ``radie av den perfekta cirkeln som passar kring riktningen``.
 \subsubsection{Krökningsradie}
 \textbf{I 2D gäller:}
 $$
@@ -874,6 +874,8 @@ $$
 U_{1-2} = \int_{\vec r_1}^{\vec r_2} \vec F \cdot \vec{dr}
 $$
 \end{ankiflashcard}
+\subsection{Effekt}
+TODO
 \subsection{Potentiell energi}
 En potentiell energi är en potentialfunktion till ett kraftfält. \textit{Observera att} den definieras åt ``andra riktningen`` än vad man kanske är van med från flervariabeln!
 
@@ -900,7 +902,11 @@ T_1 + V_1 + T_2 + V_2\quad\left\{\begin{array}{l}T_1: \text{Kinetisk energi i pu
 Rörelsemängden för ett system \textbf{bevaras}, dvs
 $$\vec p_{\text{tot}}^{\prime} = \vec p_{\text{tot}}$$
 \subsection{Stötar}
-En stöt är en impuls som sker under en (mycket) kort tid. En stöt kan vara \textit{elastisk} (partiklarna rör sig separat från varandra efter kollisionen) eller \textit{inelastisk} (partiklarna rör sig som en sammanhängande massa efter kollisionen).
+En stöt är en impuls som sker under en (mycket) kort tid. En stöt kan vara:
+\begin{itemize}
+    \item \textit{elastisk} (partiklarna rör sig separat från varandra efter kollisionen) - studstal $1$, \color{blue}\textit{minimal }\color{black} energiförlust
+    \item  \textit{inelastisk } (partiklarna rör sig som en sammanhängande massa efter kollisionen) - studstal $0$, \color{red}\textit{maximal }\color{black} energiförlust
+\end{itemize}
 \subsubsection{Stötimpulslagen för två partiklar}
 $$\vec I_{12} = m(\vec v^{\prime} - \vec v)$$
 \subsubsection{Studstal}
@@ -921,7 +927,7 @@ $$
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.2\textwidth]{snedstöt.png}
-    \caption{Snestöt.}
+    \caption{Snedstöt.}
 \end{figure}
 
 \end{paracol}
