Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -788,7 +788,12 @@ $$I = \Delta \vec p = m \Delta \vec v = \int_{t_1}^{t_2} \vec F dt$$
     Kännetecken:
     \begin{itemize}
         \item \textit{Kraft}momentet är $0$ $\implies$ \textit{rörelsemängds}momentet är konstant. 
+        \item Partikelbanorna är plana, normalen ges av $$\vec H_O$$
     \end{itemize}
+\end{ankiflashcard}
+\begin{ankiflashcard}{Definiera sektorhastigheten vid centralrörelse}
+    \textbf{Sektorhastigheten} (vid centralrörelse!) är konstant.
+    $\dot A = \frac 1 2 r^2 \dot \theta$
 \end{ankiflashcard}
 \switchcolumn
 \subsubsection{(Mycket) användbara samband vid beräkning}
@@ -856,6 +861,9 @@ $$
 \subsection{Dynamikens kraftekvationer}
 \subsubsection{Rörelsemängd}
 $$\vec p = m \vec v$$
+\subsection{Rörelsemängden för ett system}
+Rörelsemängden för ett system \textbf{bevaras}, dvs
+$$\vec p_{\text{tot}}^{\prime} = \vec p_{\text{tot}}$$
 \subsubsection{Kraftsumma (Rörelsemängdslagen)}
 Summan av alla krafter som verkar på ett system är tidsderivatan av dess rörelsemängd:
 $$\dot{\vec p} = \vec F$$
@@ -875,7 +883,7 @@ U_{1-2} = \int_{\vec r_1}^{\vec r_2} \vec F \cdot \vec{dr}
 $$
 \end{ankiflashcard}
 \subsection{Effekt}
-TODO
+$$P = \vec F \cdot \vec v$$
 \subsection{Potentiell energi}
 En potentiell energi är en potentialfunktion till ett kraftfält. \textit{Observera att} den definieras åt ``andra riktningen`` än vad man kanske är van med från flervariabeln!
 
@@ -898,11 +906,8 @@ $$
 \textbf{OBS!} Denna lag gäller bara om alla krafter som utför arbete är konservativa!
 $$
 T_1 + V_1 + T_2 + V_2\quad\left\{\begin{array}{l}T_1: \text{Kinetisk energi i punkt 1} \\V_1: \text{Potentialenergi i punkt 1} \\T_2: \text{Kinetisk energi i punkt 2} \\V_2: \text{Potentialenergi i punkt 2} \\\end{array}\right.$$
-\subsection{Rörelsemängden för ett system}
-Rörelsemängden för ett system \textbf{bevaras}, dvs
-$$\vec p_{\text{tot}}^{\prime} = \vec p_{\text{tot}}$$
 \subsection{Stötar}
-En stöt är en impuls som sker under en (mycket) kort tid. En stöt kan vara:
+En stöt är en impuls som sker under en (mycket) kort tid. En stöt kan vara något på skalan mellan:
 \begin{itemize}
     \item \textit{elastisk} (partiklarna rör sig separat från varandra efter kollisionen) - studstal $1$, \color{blue}\textit{minimal }\color{black} energiförlust
     \item  \textit{inelastisk } (partiklarna rör sig som en sammanhängande massa efter kollisionen) - studstal $0$, \color{red}\textit{maximal }\color{black} energiförlust
@@ -926,7 +931,7 @@ e=\frac{v'\cos\beta}{v\cos\alpha}\text{ samt } e =\frac{\tan \alpha}{\tan \beta}
 $$
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.2\textwidth]{snedstöt.png}
+\includegraphics[width=0.2\textwidth]{snedstöt.png}
     \caption{Snedstöt.}
 \end{figure}
 
