--- a/main.tex
+++ b/main.tex
@@ -78,8 +78,8 @@
 }
 \begin{document}
 \Huge{Mekanik I - Sammanfattning}
-\normalsize\newline
-\textit{Med reseveration för att formler och/eller fakta är felaktiga och övriga skrivfel. Den senaste versionen av formelbladet (tillsammans med flashcards) finns att hitta på \url{https://github.com/sotpotatis/mekanik-i-cheatsheet}.}
+\large\newline
+\textit{Med reseveration för att formler och/eller fakta är felaktiga och övriga skrivfel. Den senaste versionen av formelbladet (tillsammans med flashcards) finns att hitta, free of charge, no strings attached, på \url{https://github.com/sotpotatis/mekanik-i-cheatsheet}. \textbf{Lycka till!}}
 \newpage
 \midtitle{Statik}
 \begin{paracol}{2}
