--- a/main.tex
+++ b/main.tex
@@ -809,7 +809,7 @@ Potentialen mellan två kroppar med massor $m$ och $M$ på ett avstånd $r$ ges 
 $$
 V(r)=-\frac{GmM}{r}
 $$
-\textbf{Viktigt!} Det går nära jordytan att byta ut $\frac{GM}{r} \longleftrightarrow \frac{gR^2}{r}$
+\textbf{Viktigt!} Det går nära jordytan att byta ut $GM\longleftrightarrow gR^2$
 Så \textit{vid rörelse kring jorden gäller}
 $$
 V(r)=-\frac{mgR^2}{r}
@@ -823,7 +823,9 @@ $$
 V(z)=mgz
 $$
 \end{ankiflashcard}
-
+\begin{ankiflashcard}{Definera allmäna gravitationskraften.}
+    Notera även \textbf{allmäna gravitationskraften } mellan två kroppar som är $F_g = \frac{GMm}{r^{\mathbf 2}}$. (observera $r^2$!)
+\end{ankiflashcard}
 % DONOTREMOVE ANKI-FLASHCARD GUID 1267332568
 \begin{ankiflashcard}{Definiera potentialenergi och fjäderkraft för en fjäder.}
     \subsubsection{Fjäder}
@@ -874,7 +876,7 @@ $$\text{impuls: } I = \Delta \vec p = m \Delta \vec v = \underbrace{F\Delta t = 
   
     Principen för en centralrörelse är att \textit{endast en centralkraft (en kraft som alltid går genom samma punkt)}, inga andra krafter, utför \textit{arbete}. \textit{Exempelvis:} en satellits rörelse runt jorden, en fjäder fäst i en punkt (om alla krafter utom fjäderkraften kan försummas)
 
-    Kännetecken:
+    \textbf{Kännetecken för centralrörelse:}
     \begin{itemize}
         \item \textit{Kraft}momentet är $0$ $\implies$ \textit{rörelsemängds}momentet är konstant. 
         \item Partikelbanorna är plana, normalen ges av $\frac{\vec H_O}{\left\| H_0 \right\|}$
